// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConwayGame .play SHOULD return populated cells #0 1`] = `
Array [
  Cell {
    "x": 1,
    "y": 2,
  },
  Cell {
    "x": 2,
    "y": 2,
  },
]
`;

exports[`ConwayGame .play SHOULD return populated cells #1 1`] = `
Array [
  Cell {
    "x": 2,
    "y": 4,
  },
  Cell {
    "x": 2,
    "y": 5,
  },
  Cell {
    "x": 4,
    "y": 3,
  },
  Cell {
    "x": 4,
    "y": 4,
  },
  Cell {
    "x": 2,
    "y": 3,
  },
]
`;

exports[`Position .neighbours SHOULD return WHEN Position(1, 1) 1`] = `
Array [
  Cell {
    "x": 1,
    "y": 2,
  },
  Cell {
    "x": 1,
    "y": 0,
  },
  Cell {
    "x": 2,
    "y": 1,
  },
  Cell {
    "x": 0,
    "y": 1,
  },
  Cell {
    "x": 2,
    "y": 2,
  },
  Cell {
    "x": 2,
    "y": 0,
  },
  Cell {
    "x": 0,
    "y": 2,
  },
  Cell {
    "x": 0,
    "y": 0,
  },
]
`;

exports[`Position .neighbours SHOULD return WHEN Position(2, 2) 1`] = `
Array [
  Cell {
    "x": 2,
    "y": 3,
  },
  Cell {
    "x": 2,
    "y": 1,
  },
  Cell {
    "x": 3,
    "y": 2,
  },
  Cell {
    "x": 1,
    "y": 2,
  },
  Cell {
    "x": 3,
    "y": 3,
  },
  Cell {
    "x": 3,
    "y": 1,
  },
  Cell {
    "x": 1,
    "y": 3,
  },
  Cell {
    "x": 1,
    "y": 1,
  },
]
`;

exports[`Position .neighboursInBound SHOULD return WHEN Position(1, 1) 1`] = `
Array [
  Cell {
    "x": 1,
    "y": 2,
  },
  Cell {
    "x": 2,
    "y": 1,
  },
  Cell {
    "x": 2,
    "y": 2,
  },
]
`;

exports[`Position .neighboursInBound SHOULD return WHEN Position(1, 2) 1`] = `
Array [
  Cell {
    "x": 1,
    "y": 3,
  },
  Cell {
    "x": 1,
    "y": 1,
  },
  Cell {
    "x": 2,
    "y": 2,
  },
  Cell {
    "x": 2,
    "y": 3,
  },
  Cell {
    "x": 2,
    "y": 1,
  },
]
`;

exports[`Position .neighboursInBound SHOULD return WHEN Position(1, 3) 1`] = `
Array [
  Cell {
    "x": 1,
    "y": 2,
  },
  Cell {
    "x": 2,
    "y": 3,
  },
  Cell {
    "x": 2,
    "y": 2,
  },
]
`;

exports[`Position .neighboursInBound SHOULD return WHEN Position(2, 2) 1`] = `
Array [
  Cell {
    "x": 2,
    "y": 3,
  },
  Cell {
    "x": 2,
    "y": 1,
  },
  Cell {
    "x": 3,
    "y": 2,
  },
  Cell {
    "x": 1,
    "y": 2,
  },
  Cell {
    "x": 3,
    "y": 3,
  },
  Cell {
    "x": 3,
    "y": 1,
  },
  Cell {
    "x": 1,
    "y": 3,
  },
  Cell {
    "x": 1,
    "y": 1,
  },
]
`;

exports[`Position .neighboursInBound SHOULD return WHEN Position(2, 3) 1`] = `
Array [
  Cell {
    "x": 2,
    "y": 2,
  },
  Cell {
    "x": 3,
    "y": 3,
  },
  Cell {
    "x": 1,
    "y": 3,
  },
  Cell {
    "x": 3,
    "y": 2,
  },
  Cell {
    "x": 1,
    "y": 2,
  },
]
`;

exports[`Position .neighboursInBound SHOULD return WHEN Position(3, 1) 1`] = `
Array [
  Cell {
    "x": 3,
    "y": 2,
  },
  Cell {
    "x": 2,
    "y": 1,
  },
  Cell {
    "x": 2,
    "y": 2,
  },
]
`;

exports[`Position .neighboursInBound SHOULD return WHEN Position(3, 3) 1`] = `
Array [
  Cell {
    "x": 3,
    "y": 2,
  },
  Cell {
    "x": 2,
    "y": 3,
  },
  Cell {
    "x": 2,
    "y": 2,
  },
]
`;

exports[`Position .neighboursInBound SHOULD return WHEN Position(4, 3) 1`] = `
Array [
  Cell {
    "x": 4,
    "y": 4,
  },
  Cell {
    "x": 4,
    "y": 2,
  },
  Cell {
    "x": 5,
    "y": 3,
  },
  Cell {
    "x": 3,
    "y": 3,
  },
  Cell {
    "x": 5,
    "y": 4,
  },
  Cell {
    "x": 5,
    "y": 2,
  },
  Cell {
    "x": 3,
    "y": 4,
  },
  Cell {
    "x": 3,
    "y": 2,
  },
]
`;
